<resources>
    <string name="app_name">缺陷申报</string>
    <string name="fault_post">缺陷申报</string>
    <string name="fault_complete">完 成</string>
    <string name="fault_type">缺陷类型</string>
    <string name="fault_type_tip">请选择缺陷类型(必填)</string>
    <string name="fault_patrol">相关巡检</string>
    <string name="fault_equipment">相关设备</string>
    <string name="fault_level">严重程度</string>
    <string name="fault_level_tip">请选择严重程度(必填)</string>
    <string name="fault_processing_person">处  理   人</string>
    <string name="fault_processing_person_tip">请选择处理人</string>
    <string name="fault_add_remark">缺陷描述</string>
    <string name="fault_remark">缺陷备注</string>
    <string name="fault_record">现场记录</string>
    <string name="fault_add_pic">最多添加6张图片</string>
    <string name="fault_processing_person_title">选择处理人</string>
    <string name="fault_add_remarks">添加备注</string>
    <string name="fault_add_remarks_content">添加分析内容</string>
    <string name="fault_add_remarks_chars">0/200</string>
    <string name="fault_remark_max_length">200</string>
    <string name="fault_manager_search">搜索缺陷类型/编号</string>
    <string name="fault_manager">缺陷管理</string>
    <string name="fault_assignment">分  派</string>

    <string name="faut_type">缺陷类型</string>
    <string name="fault_number">缺陷编号</string>
    <string name="falut_level">严重程度</string>
    <string name="falut_equipment">相关设备</string>
    <string name="fault_equipment_tip">请选择设备</string>
    <string name="falut_location">区域位置</string>
    <string name="fault_location_tip">请选择区域位置(必填)</string>
    <string name="falut_patrol">相关巡检</string>
    <string name="falut_scene">现场记录</string>
    <string name="falut_result">处理结果</string>
    <string name="fault_look_report_result">查看结果</string>
    <string name="fault_look_report_repair">查看报修</string>
    <string name="falut_equipment_repair">设备报修</string>
    <string name="falut_declare_remark">缺陷描述</string>
    <string name="falut_new_scene">缺陷现场记录</string>
    <string name="falut_no_content">无内容</string>
    <string name="falut_processing_results">处理结果详情</string>
    <string name="falut_processing_progress">处理进度</string>
    <string name="falut_processing_result">处理结果</string>
    <string name="falut_processing_reason">缺陷原因</string>
    <string name="fault_comple_time">完成时间</string>
    <string name="falut_processing_time">处理时间</string>
    <string name="falut_processing_scene">处理后现场记录</string>
    <string name="falut_processing_remark">备注</string>
    <string name="falut_processing_equipment_repair">设备报修</string>
    <string name="falut_type">维修类型</string>
    <string name="falut_equipment_name">设备名称</string>
    <string name="falut_equipment_code">设备编号</string>
    <string name="falut_equipment_org">所属组织</string>
    <string name="falut_process_postion">区域位置</string>
    <string name="falut_reason">故障原因</string>
    <string name="falut_degree">紧急程度</string>
    <string name="falut_add_remarks">故障描述</string>
    <string name="falut_equipments">设备报修</string>
    <string name="falut_details">缺陷详情</string>
    <string name="falut_processing_result_repari">处理结果填报</string>
    <string name="falut_processing_after">处理后现场记录</string>
    <string name="falut_type_title">缺陷类型</string>
    <string name="fault_success">提交成功</string>
    <string name="fault_see">查看缺陷</string>
    <string name="fault_back_home">返回首页</string>
    <string name="fault_equipment_success">设备维修申请提交成功</string>
    <string name="fault_submit_success2">缺陷提交成功</string>
    <string name="title_activity_fault_filter">FaultFilterActivity</string>
    <string name="fault_servity">严重程度</string>
    <string name="permissions_camera">此功能需要相机和存储权限才能使用</string>
    <string name="fault_see_to">查看现场记录</string>
    <string name="fault_seletor_equ">请选择一台设备</string>
    <string name="fault_seletor_servity">请选择紧急程度</string>
    <string name="fault_seletor_reason">请选择故障原因</string>
    <string name="fault_seletor_repair">请选择维修类型</string>
    <string name="fault_distribution">任务分配成功</string>
    <string name="fault_create_person">创建人</string>
    <string name="fault_chu_person">处理人</string>
    <string name="fault_current_excute_person">当前处理人   </string>
    <string name="repair_type_internal">内部维修</string>
    <string name="fault_nuber">缺陷编号：</string>
    <string name="fault_level2">缺陷等级：</string>
    <string name="task_assign_failed">任务分配失败</string>
    <string name="fault_upload_failed">提交失败请联系管理员</string>
</resources>
