<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <include layout="@layout/title_common" />


    <ImageView
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/ic_fault_success" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/fault_success"
        android:textColor="@color/color_login_hint"
        android:textSize="@dimen/fs16" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:text="@string/fault_submit_success2"
        android:textColor="@color/color_self_tv"
        android:textSize="@dimen/fs15" />

    <TextView

        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="@drawable/fault_success_shape"
        android:padding="10dp"
        android:text="@string/fault_see"
        android:textColor="@color/color_title_blue_bg"
        android:visibility="gone" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dip"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fault_see_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dip"
            android:layout_marginBottom="5dip"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fault_see"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/fs14" />

        <View
            android:layout_width="1dp"
            android:layout_height="20dip"
            android:background="@color/color_underline"
            android:paddingTop="2dip"
            android:paddingBottom="2dip" />

        <TextView
            android:id="@+id/patrol_backhome_tv"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/fault_back_home"
            android:textColor="@color/color_blue"
            android:textSize="@dimen/fs14" />
    </LinearLayout>
</LinearLayout>
