<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/title_common2" />

    <TextView
        android:id="@+id/label_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="添加故障分析"
        android:textColor="@color/color_task_ft"
        android:textSize="@dimen/fs15" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_margin="15dp"
        android:background="@drawable/fault_post_remarks_shape"
        android:orientation="vertical">

        <EditText
            android:id="@+id/remarks_edt"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@null"
            android:gravity="top"
            android:hint="@string/fault_add_remarks_content"
            android:maxLength="@string/fault_remark_max_length"
            android:textColor="@color/color_messge_ft"
            android:textSize="@dimen/fs14" />

        <LinearLayout
            android:id="@+id/audio_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="7dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/char_lenth_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="7dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/fault_add_remarks_chars"
                android:textColor="@color/color_back"
                android:textSize="13sp" />

            <View
                android:layout_width="16dp"
                android:layout_height="19dp"
                android:layout_marginRight="7dp"
                android:background="@mipmap/audio_icon" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
