<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_white"
    android:orientation="vertical">

    <include layout="@layout/title_common2" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <LinearLayout
                android:id="@+id/repair_ll"
                style="@style/fault_manager_details_ll"
                android:visibility="gone">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="@string/falut_type" />

                <TextView
                    android:id="@+id/fault_repair_tv"
                    style="@style/fault_equipment_repair_tv" />

                <View style="@style/fault_equipment_repair_iv" />
            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <LinearLayout
                android:id="@+id/fault_equipment_ll"
                style="@style/fault_manager_details_ll">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="@string/falut_equipment_name" />

                <TextView
                    android:id="@+id/fault_equipment_name_tv"
                    style="@style/fault_equipment_repair_tv"
                    android:singleLine="true" />

                <View
                    android:id="@+id/scan_code_iv"
                    android:layout_width="22dp"
                    android:layout_height="22dp"
                    android:layout_marginRight="15dp"
                    android:background="@drawable/ic_scan_code"
                    android:padding="6dp" />

                <View style="@style/fault_equipment_repair_iv" />
            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <LinearLayout style="@style/fault_manager_details_ll">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="@string/falut_equipment_code" />

                <TextView
                    android:id="@+id/fault_equipment_code_tv"
                    style="@style/fault_equipment_repair_tv" />

            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <LinearLayout style="@style/fault_manager_details_ll">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="@string/falut_equipment_org" />

                <TextView
                    android:id="@+id/fault_org_tv"
                    style="@style/fault_equipment_repair_tv" />

            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <LinearLayout style="@style/fault_manager_details_ll">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="@string/falut_process_postion" />

                <TextView
                    android:id="@+id/process_tv"
                    style="@style/fault_equipment_repair_tv" />

            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <LinearLayout
                android:id="@+id/fault_reason_ll"
                style="@style/fault_manager_details_ll">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="@string/falut_reason" />

                <TextView
                    android:id="@+id/fault_reason_tv"
                    style="@style/fault_equipment_repair_tv" />

                <View style="@style/fault_equipment_repair_iv" />
            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <LinearLayout
                android:id="@+id/processing_person_ll"
                style="@style/fault_manager_details_ll">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="处理人" />

                <TextView
                    android:id="@+id/processing_person_tv"
                    style="@style/fault_equipment_repair_tv" />

                <View style="@style/fault_equipment_repair_iv" />
            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <LinearLayout
                android:id="@+id/fault_severity_ll"
                style="@style/fault_manager_details_ll">

                <TextView
                    style="@style/fault_manager_details_tv"
                    android:text="@string/falut_degree" />

                <TextView
                    android:id="@+id/fault_severity_tv"
                    style="@style/fault_equipment_repair_tv" />

                <View style="@style/fault_equipment_repair_iv" />
            </LinearLayout>

            <View style="@style/fault_manager_hint" />

            <TextView
                style="@style/fault_manager_details_tv"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="10dp"
                android:text="@string/falut_add_remarks" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/fault_scene_bg_shape"
                android:orientation="vertical">

                <androidx.core.widget.NestedScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical">

                        <EditText
                            android:id="@+id/fault_scene_et"
                            android:layout_width="match_parent"
                            android:layout_height="130dp"
                            android:layout_margin="10dp"
                            android:background="@null"
                            android:gravity="top"
                            android:hint="添加描述"
                            android:maxLength="100"
                            android:textColor="@color/color_task_ft"
                            android:textSize="@dimen/fs15" />

                        <LinearLayout
                            android:id="@+id/audio_ll"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="7dp"
                            android:orientation="horizontal">

                            <TextView
                                android:id="@+id/char_lenth_tv"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginRight="7dp"
                                android:layout_weight="1"
                                android:gravity="right"
                                android:text="0/100"
                                android:textColor="@color/color_back"
                                android:textSize="13sp" />

                            <View
                                android:layout_width="16dp"
                                android:layout_height="19dp"
                                android:layout_marginRight="7dp"
                                android:background="@mipmap/audio_icon" />
                        </LinearLayout>
                    </LinearLayout>
                </androidx.core.widget.NestedScrollView>

            </LinearLayout>
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
